--- a/app/css/app.css
+++ b/app/css/app.css
@@ -2,11 +2,11 @@
 
 /* Global styles */
 * {
-	font-family: Tahoma, Geneva, sans-serif;
+	font-family: Oswald, Cabin, Tahoma, Geneva, sans-serif;
 	color: #666666;
 	font-weight: 12px;
 	letter-spacing: 0.6pt;
-	word-spacing: 7.8pt;	
+	word-spacing: 1.8pt;	
 	margin: 0;
 	padding: 0;
 }
@@ -17,11 +17,13 @@ h1 {
 	text-align: center;
 	font-size: 3em;
 	font-weight: bold;
+	text-shadow: 0px 1px 1px #555;
 }
 h2 {
 	text-align: center;
 	color: #A6A6A6;
 	font-size: 2em;
+	text-shadow: 0px 1px 1px #555;
 }
 
 /* Menu styles */
@@ -38,7 +40,9 @@ h2 {
 	display: block;
 	text-decoration: none;
 	color: #f0f0f0;
-	font-size: 1.6em;
+	font-size: 1.5em;
+	font-weight: bold;
+	text-shadow: 0px 2px 3px #555;
 }
 #navigation li a:hover {
     color: #A6A6A6;
@@ -63,15 +67,39 @@ h2 {
 	width: 0px;
 	position: relative;
 	float: right;
-	right: -35px;
+	right: -34px;
 	top: -35px;
 } 
+
+/* Sub-menu styles */
+#navigation_sub_container {
+	max-width: 70%;
+}
+#navigation.sub-menu {
+	margin: 0;
+}
+#navigation.sub-menu  li a {
+	font-size: 1em;
+}
+#navigation li a.selected {
+    color: #000000;
+}
+.rectangle.sub-menu {
+	background: #666666;
+	height: 26px;
+}
+.r-triangle.sub-menu {
+	border-color: #959595 transparent transparent;
+	border-width: 26px;
+	right: -26px;
+	top: -26px;
+} 
+
 
 /* Main container style */
 div.container {
 	width: 75%;
 	min-height: 800px;
-	margin-top: 30px;
 }
 
 /* Gallery styles */
@@ -79,18 +107,20 @@ div.container {
 	padding: 30px;
 	text-align:center;
 	display: flex;
-}
-.painting-wrapper {
-	//display: inline-block;	
+	margin: 0;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: flex-start;;
 }
 .painting-wrapper .name {
-	//float: left;	
-	//width: 100%
+	float: left;	
+	width: 100%;
+	margin-top: 12px;
 }
 .painting {
 	list-style: none;
 	padding: 5px;
-	margin: 10px 50px;
+	margin: 35px 20px 3px;
 	-webkit-box-shadow: 1px 5px 9px 2px #A8A2A2;
 	box-shadow: 1px 5px 9px 2px #A8A2A2;
 }
@@ -114,11 +144,10 @@ footer {
 	z-index: 400;	
 }
 footer, .push {
-height: 2em;
+	height: 2em;
 }
 div.flag-container {
-	float: left;
-	margin-left: 20px;	
+    padding-top: 9px;
 }
 img.flag {
 	height: 20px;	
