--- a/app/css/responsive.css
+++ b/app/css/responsive.css
@@ -3,7 +3,9 @@
 /* Tablets */
 @media only screen and (max-width: 950px) {
    /* Menu styles */
-   #navigation li a { font-size: 1.3em; }
+   #navigation li a { font-size: 1.2em; }
+   div.rectangle { height: 32px; }
+   div.flag-container { padding-top: 5px; }
 }
 
 
@@ -14,6 +16,10 @@
    div.r-triangle { display: none; }
    div.rectangle { height: 27px; }
    #navigation_container { max-width: 100%; }
+   div.flag-container { float: right; padding-top: 3px; }
+
+   /* Sub menu syles */
+   #navigation_sub_container { max-width: 100%; }
    
    /* Corner image styles */
    img.top-corner { display: none; }
