--- a/app/partials/paintings.html
+++ b/app/partials/paintings.html
@@ -1,10 +1,11 @@
-<h1>{{ 'home.title' | translate | uppercase}}<h1>
-<h2>{{ 'home.subTitle' | translate | uppercase}}</h2>
-<ul class="gallery">
+<!-- Sub-Menu -->
+<div id="navigation_sub_container" class="menu" my-menu="sub"></div>
+
+<!--ul class="gallery">
  <div class="painting-wrapper" ng-repeat="painting in paintings">
    <li class="painting mini">
    	<a ng-href="/#/paintings/{{ painting.gallery }}/{{ painting.id }}"><img ng-src="{{ painting.thumbnail }}" alt="{{ painting.name }}" title="{{ painting.name }}"></a>
    </li>
    <span class="name">{{ painting.name | uppercase }}</span>
  </div>
-</ul>
+</ul-->
