--- a/app/partials/painting.html
+++ b/app/partials/painting.html
@@ -1,5 +1,4 @@
-<h1>{{painting.gallery}}<h1>
-<h2>{{painting.name}}</h2>
+<h1>{{painting.name}}<h1>
  
 <div class="painting-wrapper">
   <li class="painting">
